--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -6,7 +6,7 @@
 <style>
     body{
         wight: 90vw;
-        max-widht: 400px
+        max-widht: 400px;
         heigth: 60vh;
         overflow-y: auto;
     }
