--- a/templates/registro.html
+++ b/templates/registro.html
@@ -42,7 +42,11 @@
     <br><br>
     <button type="submit">Registrarse</button>
     </form>
-    <button onclick="/sesion">Iniciar sesión</button>
+    <button onclick="sesion()">Iniciar sesión</button>
+    <script>
+        function sision() {
+            window.location.href="/sesion";
+        }
 
 </body>
 </html>
