--- a/templates/registro.html
+++ b/templates/registro.html
@@ -5,8 +5,6 @@
         body{
             color: white;
             background-color: skyblue;
-            font-family: Arial;
-            font-size: 30px;
             text-align: center;
             place-items: center;
             width: 90vw;
@@ -24,9 +22,11 @@
         }
         a{
             color: #121212;
-            font-align: right;
+            font-align: end;
+            font-size: 23;
         }
         .container{
+            padding: 18;
             margin-bottom: 12px;
         }
     </style>
