--- a/templates/registro.html
+++ b/templates/registro.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <style>
+        head{
+            background-color: white;
+        }
         body{
             color: white;
             background-color: skyblue;
