--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -5,7 +5,7 @@
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
 <style>
     body{
-        wight: 90vw;
+        width: 90vw;
         max-widht: 400px;
         heigth: 60vh;
         overflow-y: auto;
@@ -20,8 +20,18 @@
         place-items: center;
     }
     p{
+        margin: 0;
+        heigth: 100vh;
+        background: linear-gradient(-40deg, red, #121212, blue);
+        background-size: 100% 100%;
+        animation: fondoAnimado 10s ease infinite;
         text-align: center;
         font-size: 30px;
+    }
+    @keyframes fondoAnimado{
+        0% {background-position: 0% 50%;}
+        50% {background-position:100% 50%;}
+        100% {background-position: 0% 50%;}
     }
     h1{
         text-align: center;
