--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -18,6 +18,7 @@
         border: none;
         heigth: 30px;
         place-items: center;
+        margin-bottom: 20px;
     }
     p{
         margin: 0;
