Actualizar registro.html

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -47,7 +47,7 @@
     </form>
     <button onclick="sesion()">Iniciar sesión</button>
     <script>
-        function sision() {
+        function sesion() {
             window.location.href="/sesion";
         }
     </script>
