Actualizar registro.html

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -45,12 +45,9 @@
     <br><br>
     <button type="submit">Registrarse</button>
     </form>
-    <button onclick="sesion()">Iniciar sesión</button>
-    <script>
-        function sesion() {
-            window.location.href="/sesion";
-        }
-    </script>
+<a href="/sesion"> 
+    <button>Iniciar sesión</button>
+</a>
 
 </body>
 </html>
