Actualizar registro.html

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -25,8 +25,9 @@
         }
         a{
             color: #121212;
-            font-align: end;
+            text-align: end;
             font-size: 23;
+            text-align: rigth;
         }
         .container{
             padding: 18;
