Actualizar registro.html

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -27,7 +27,7 @@
             color: #121212;
             text-align: end;
             font-size: 23;
-            text-align: rigth;
+            text-align: right;
         }
         .container{
             padding: 18;
