Actualizar registro.html

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -25,13 +25,8 @@
         }
         a{
             color: #121212;
-            text-align: end;
-            font-size: 23;
             text-align: right;
-        }
-        .container{
-            padding: 18;
-            margin-bottom: 12px;
+            font-size: 23px;
         }
     </style>
     <a href="/sesion">ya tengo cuenta</a>
