Actualizar registro.html

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -23,13 +23,18 @@
             place-items: center;
             
         }
+        .contenedor{
+         display: flex;
+         justify-content: flex-end;
+        }
         a{
             color: #121212;
-            text-align: right;
             font-size: 23px;
         }
     </style>
+ <div class="contenedor">
     <a href="/sesion">ya tengo cuenta</a>
+ </div> 
 </head>
 <body>
 <form method="POST"> 
