Actualizar registro.html

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -26,6 +26,7 @@
         .contenedor{
          display: flex;
          justify-content: flex-end;
+         width: 100%;
         }
         a{
             color: #121212;
