Actualizar registro.html

--- a/templates/registro.html
+++ b/templates/registro.html
@@ -11,7 +11,7 @@
             text-align: center;
             place-items: center;
             width: 90vw;
-            max-width:100;
+            max-width:100%;
             heigth: 60vh;
             overflow-y: auto;
         }
@@ -31,6 +31,12 @@
         a{
             color: #121212;
             font-size: 23px;
+        }
+        form{
+            width:90vw;
+            max-width: 100%;
+            heigth: 60vh;
+            overflow-y: auto;
         }
     </style>
 </head>
