--- a/templates/inicio.html
+++ b/templates/inicio.html
@@ -18,6 +18,7 @@
         border: none;
         heigth: 30px;
         place-items: center;
+        text-align: center;
         margin-bottom: 20px;
     }
     p{
@@ -51,7 +52,7 @@
 </head>
 <body>
 <div id="particles-js"></div>
-  <button onclick="Pag1()">Click</button>
+  <button onclick="Pag1()">Continuar</button>
   <script>
          function Pag1() {
             let y = confirm("Desea continuar")
